--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
         </div>
       </section>
     </main>
-    <script src="./src/js/script.js"></script>
+    <script type="module" src="./src/js/script.js"></script>
   </body>
 </html>
