--- a/index.html
+++ b/index.html
@@ -39,9 +39,28 @@
         </div>
         <div class="card-content">
           <p class="card-answer">
-            I have been extremely happy with the results of working with the
-            creative agency, and I would highly recommend them to anyone who is
-            looking for high-quality design and development services.
+            The customer service that I received was also top-notch. The team
+            was helpful, friendly, and responsive. They answered all of my
+            questions and made sure that I was completely satisfied with my
+            purchase.
+          </p>
+        </div>
+      </section>
+
+      <section class="card">
+        <div class="card-header">
+          <h2 class="card-question">do you use organic ingredients?</h2>
+          <button class="button-collapse">
+            <i class="far fa-plus-square"></i>
+            <i class="far fa-minus-square"></i>
+          </button>
+        </div>
+        <div class="card-content">
+          <p class="card-answer">
+            The creative agency has helped me to develop a consistent brand
+            identity that has helped my business to stand out in a crowded
+            market. They have also designed and developed a website for my
+            business that is both user-friendly and visually appealing.
           </p>
         </div>
       </section>
